syntax = "proto3";

package ai.metathings.service.deviced;

import "validate/validate.proto";

import "model.proto";

message CreateFlowSetRequest {
	OpFlowSet flow_set = 1 [(validate.rules).message.required = true];
}

message CreateFlowSetResponse {
	FlowSet flow_set = 1;
}
